# af-ipc

./: .gitignore  Makefile  README.md
pkg/: configure.ac
pkg/src/: Makefile.am  af_ipc_client.c  af_ipc_client.h  af_ipc_common.c  af_ipc_common.h  af_ipc_prv.h  af_ipc_server.c  af_ipc_server.h  af_rpc.c  af_rpc.h  ipc_send.c  ipc_wait.c  libaf_ipc_test_client.c  libaf_ipc_test_common.h  libaf_ipc_test_server.c  test_rpc.c
